[package]
name = "raftkv"
version = "0.1.0"
authors = ["siddontang <siddontang@gmail.com>"]

[dependencies]
raft = "0.1"
log = "0.4"
env_logger = "0.5.5"
clap = "2.31.1"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
protobuf = "1.4"
byteorder = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.1"
reqwest = "0.8.5"
rand = "0.4"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[replace]
"protobuf:1.4.1" = { git = "https://github.com/stepancheg/rust-protobuf.git" }